<?xml version="1.0"?>
<package format="2">
    <name>eleven_bringup</name>
    <version>0.1.0</version>
    <description>The eleven_control package</description>
    <author email="sweilz.w@gmail.com">Liews Wuttipat</author>
    <maintainer email="sweilz.w@gmail.com">Liews Wuttipat</maintainer>
    <license>BSD</license>

    <url type="repository">https://github.com/SweiLz/Eleven</url>
    <url type="bugtracker">https://github.com/SweiLz/Eleven/issues</url>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_depend>rosserial_python</build_depend>
    <build_depend>imu_complementary_filter</build_depend>
    <build_depend>robot_localization</build_depend>
    

    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>rosserial_python</build_export_depend>
    <build_export_depend>imu_complementary_filter</build_export_depend>
    <build_export_depend>robot_localization</build_export_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>rosserial_python</exec_depend>
    <exec_depend>imu_complementary_filter</exec_depend>
    <exec_depend>robot_localization</exec_depend>

</package>
