<?xml version="1.0"?>
<package format="2">
    <name>eleven_control</name>
    <version>0.1.0</version>
    <description>The eleven_control package</description>
    <author email="sweilz.w@gmail.com">Liews Wuttipat</author>
    <maintainer email="sweilz.w@gmail.com">Liews Wuttipat</maintainer>
    <license>BSD</license>

    <url type="repository">https://github.com/SweiLz/Eleven</url>
    <url type="bugtracker">https://github.com/SweiLz/Eleven/issues</url>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>controller_interface</build_depend>
    <build_depend>controller_manager</build_depend>
    <build_depend>diff_drive_controller</build_depend>
    <build_export_depend>controller_interface</build_export_depend>
    <build_export_depend>controller_manager</build_export_depend>
    <build_export_depend>diff_drive_controller</build_export_depend>
    <exec_depend>controller_interface</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>diff_drive_controller</exec_depend>

</package>
