<?xml version="1.0"?>
<package format="2">
    <name>eleven_description</name>
    <version>0.1.0</version>
    <description>The eleven_description package</description>
    <author email="sweilz.w@gmail.com">Liews Wuttipat</author>
    <maintainer email="sweilz.w@gmail.com">Liews Wuttipat</maintainer>
    <license>BSD</license>

    <url type="repository">https://github.com/SweiLz/Eleven</url>
    <url type="bugtracker">https://github.com/SweiLz/Eleven/issues</url>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>robot_state_publisher</build_depend>
    <build_depend>urdf</build_depend>
    <build_depend>xacro</build_depend>
    <build_export_depend>robot_state_publisher</build_export_depend>
    <build_export_depend>urdf</build_export_depend>
    <build_export_depend>xacro</build_export_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>xacro</exec_depend>

</package>
