<?xml version="1.0"?>
<package format="2">
    <name>eleven_gazebo</name>
    <version>0.1.0</version>
    <description>The eleven_gazebo package</description>
    <author email="sweilz.w@gmail.com">Liews Wuttipat</author>
    <maintainer email="sweilz.w@gmail.com">Liews Wuttipat</maintainer>
    <license>BSD</license>

    <url type="repository">https://github.com/SweiLz/Eleven</url>
    <url type="bugtracker">https://github.com/SweiLz/Eleven/issues</url>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>controller_manager</build_depend>
    <build_depend>gazebo_plugins</build_depend>
    <build_depend>gazebo_ros</build_depend>
    <build_depend>gazebo_ros_control</build_depend>
    <build_depend>hardware_interface</build_depend>
    <build_depend>joint_limits_interface</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>transmission_interface</build_depend>
    <build_export_depend>controller_manager</build_export_depend>
    <build_export_depend>gazebo_plugins</build_export_depend>
    <build_export_depend>gazebo_ros</build_export_depend>
    <build_export_depend>gazebo_ros_control</build_export_depend>
    <build_export_depend>hardware_interface</build_export_depend>
    <build_export_depend>joint_limits_interface</build_export_depend>
    <build_export_depend>pluginlib</build_export_depend>
    <build_export_depend>transmission_interface</build_export_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>gazebo_plugins</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>gazebo_ros_control</exec_depend>
    <exec_depend>hardware_interface</exec_depend>
    <exec_depend>joint_limits_interface</exec_depend>
    <exec_depend>pluginlib</exec_depend>
    <exec_depend>transmission_interface</exec_depend>

</package>
