<?xml version="1.0"?>
<package format="2">
    <name>eleven_navigation</name>
    <version>0.1.0</version>
    <description>The eleven_navigation package</description>
    <author email="sweilz.w@gmail.com">Liews Wuttipat</author>
    <maintainer email="sweilz.w@gmail.com">Liews Wuttipat</maintainer>
    <license>BSD</license>

    <url type="repository">https://github.com/SweiLz/Eleven</url>
    <url type="bugtracker">https://github.com/SweiLz/Eleven/issues</url>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>map_server</build_depend>
    <build_depend>move_base</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>dwa_local_planner</build_depend>
    <build_export_depend>map_server</build_export_depend>
    <build_export_depend>move_base</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>dwa_local_planner</build_export_depend>
    <exec_depend>map_server</exec_depend>
    <exec_depend>move_base</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>dwa_local_planner</exec_depend>


</package>
