<?xml version="1.0"?>
<package format="2">
    <name>eleven_navigation</name>
    <version>0.0.0</version>
    <description>The eleven_navigation package</description>
    <author email="sweilz.w@gmail.com">Liews Wuttipat</author>
    <maintainer email="sweilz.w@gmail.com">Liews Wuttipat</maintainer>
    <license>BSD</license>

    <url type="repository">https://github.com/SweiLz/Eleven</url>
    <url type="bugtracker">https://github.com/SweiLz/Eleven/issues</url>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>move_base_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>eleven_msgs</build_depend>

    <build_export_depend>actionlib</build_export_depend>
    <build_export_depend>move_base_msgs</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>eleven_msgs</build_export_depend>

    <exec_depend>actionlib</exec_depend>
    <exec_depend>move_base_msgs</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>eleven_msgs</exec_depend>

</package>
