<?xml version="1.0"?>
<package format="2">
    <name>eleven_slam</name>
    <version>0.1.0</version>
    <description>The eleven_slam package</description>
    <author email="sweilz.w@gmail.com">Liews Wuttipat</author>
    <maintainer email="sweilz.w@gmail.com">Liews Wuttipat</maintainer>
    <license>BSD</license>

    <url type="repository">https://github.com/SweiLz/Eleven</url>
    <url type="bugtracker">https://github.com/SweiLz/Eleven/issues</url>
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>map_server</build_depend>
    <build_depend>cartographer_ros</build_depend>
    <build_depend>cartographer_rviz</build_depend>

    <build_export_depend>map_server</build_export_depend>
    <build_export_depend>cartographer_ros</build_export_depend>
    <build_export_depend>cartographer_rviz</build_export_depend>
    <exec_depend>map_server</exec_depend>
    <exec_depend>cartographer_ros</exec_depend>
    <exec_depend>cartographer_rviz</exec_depend>
</package>
